@@ -2388,16 +2388,16 @@ rsplit_whitespace(const char *s, Py_ssize_t len, Py_ssize_t maxcount)
 
     for (i = j = len - 1; i >= 0; ) {
         /* find a token */
-        while (i >= 0 && Py_UNICODE_ISSPACE(s[i]))
+        while (i >= 0 && ISSPACE(s[i]))
             i--;
         j = i;
-        while (i >= 0 && !Py_UNICODE_ISSPACE(s[i]))
+        while (i >= 0 && !ISSPACE(s[i]))
             i--;
         if (j > i) {
             if (maxcount-- <= 0)
                 break;
             SPLIT_ADD(s, i + 1, j + 1);
-            while (i >= 0 && Py_UNICODE_ISSPACE(s[i]))
+            while (i >= 0 && ISSPACE(s[i]))
                 i--;
             j = i;
         }
